--- a/package.json
+++ b/package.json
@@ -6,17 +6,20 @@
     "build": "vite build",
     "preview": "vite preview",
     "test": "vitest",
+    "test:unit": "vitest --environment jsdom --root src/",
     "coverage": "vitest run --coverage"
   },
   "dependencies": {
     "@mdi/font": "7.1.96",
-    "pinia": "^2.0.28",
+    "pinia": "^2.0.33",
     "roboto-fontface": "*",
-    "vue": "^3.2.45",
-    "vuetify": "^3.0.5",
-    "webfontloader": "^1.6.28"
+    "vue": "^3.2.47",
+    "vuetify": "^3.1.7",
+    "webfontloader": "^1.6.28",
+    "yaml": "^2.2.1"
   },
   "devDependencies": {
+    "@pinia/testing": "^0.0.14",
     "@vitejs/plugin-vue": "^4.0.0",
     "@vue/test-utils": "^2.2.6",
     "jsdom": "^20.0.3",
